--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,8 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+
+  <div class ="footer">
+    <div class ="footer-links">
+    <a href='#'><i class="fab fa-instagram"></i></a>
+    <a href='#'><i class="fab fa-facebook"></i></a>
+    <a href='#'><i class="fab fa-twitter"></i></a>
+    </div>
+  </div>
