modified font of navbar title

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -28,8 +28,11 @@
 
 .nav-bar i {
   font-size: 40px;
+  border: solid beige 1px;
+  padding: 10px;
 }
 
 .text-change {
   font-family: cursive;
+  color: rgb(41, 159, 228);
 }
