--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,8 +14,8 @@
   <body>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
-    <%= render 'shared/navbar' %>
+    <%= render 'layouts/shared/navbar' %>
     <%= yield %>
-    <% render 'shared/footer' %>
+    <% render 'layouts/shared/footer' %>
   </body>
 </html>
