--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,6 @@
     <p class="alert"><%= alert %></p>
     <%= render 'layouts/shared/navbar' %>
     <%= yield %>
-    <% render 'layouts/shared/footer' %>
+    <%= render 'layouts/shared/footer' %>
   </body>
 </html>
