--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,7 +1,11 @@
-<div class ="footer">
+<%
+=begin%>
+ <div class ="footer">
   <div class ="footer-links">
   <a href='#'><i class="fab fa-instagram"></i></a>
   <a href='#'><i class="fab fa-facebook"></i></a>
   <a href='#'><i class="fab fa-twitter"></i></a>
   </div>
 </div>
+<%
+=end%>
