--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,26 +1,26 @@
 .footer {
-    background: white;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    height: 50px;
-    padding: 20px;
-    color: rgb(245, 241, 238);
+  background: #F4F4F4;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 100px;
+  padding: 0px 50px;
+  color: rgba(0,0,0,0.3);
 }
-
 .footer-links {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
-
 .footer-links a {
-    color:rgb(21, 108, 201);
-    opacity: 0.15;
-    text-decoration: none;
-    font-size: 24px;
-    padding: 15px;
+  color: black;
+  opacity: 0.15;
+  text-decoration: none;
+  font-size: 24px;
+  padding: 0px 10px;
 }
-
 .footer-links a:hover {
-    opacity: 1;
+  opacity: 1;
+}
+.footer .fa-heart {
+  color: #D23333;
 }
