--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,6 @@
 .navbar-lewagon {
   justify-content: space-between;
-  background: rgb(255, 255, 255);
+  background: white;
 }
 
 .navbar-lewagon .navbar-collapse {
@@ -9,31 +9,4 @@
 
 .navbar-lewagon .navbar-brand img {
   width: 40px;
-}
-
-.navbar-lewagon-white {
-  background-color: white;
-}
-
-.logo {
-  width: 80px;
-  height: 40px;
-}
-
-.nav-bar {
-  padding: 20px;
-  display: flex;
-  justify-content: space-between;
-}
-
-.user {
-  font-size: 18px;
-  border: solid beige 1px;
-  padding: 10px;
-}
-
-.text-change {
-  font-family: cursive;
-  color: rgb(41, 159, 228);
-  font-size: 18px;
 }
