--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,6 +4,7 @@
 @import "config/bootstrap_variables";
 
 // External libraries
+@import url('https://fonts.googleapis.com/css2?family=Courgette&display=swap');
 @import "bootstrap/scss/bootstrap";
 @import "font-awesome-sprockets";
 @import "font-awesome";
