--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -6,7 +6,16 @@
 .navbar-lewagon .navbar-collapse {
   flex-grow: 0;
 }
-
-.navbar-lewagon .navbar-brand img {
-  width: 40px;
+.navbar-lewagon .navbar-brand{
+  span{
+    font-family: 'Courgette', cursive;
+    font-weight: bold;
+    font-size: 30px;
+  }
+  img {
+    border: 5px solid gold;
+    box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.1);
+    width: 80px;
+    padding: 10px;
+  }
 }
