--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -57,6 +57,8 @@
 
 <%= link_to 'See our products', items_path %>
 
-<% if policy(Item).create? %>
-  <%= link_to "New item", new_item_path %>
+<% if user_signed_in? %>
+  <% if policy(Item).create? %>
+    <%= link_to "New item", new_item_path %>
+  <% end %>
 <% end %>
