--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,12 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload', defer: true %>
   </head>
   <body>
-    <p class="notice"><%= notice %></p>
+    <%
+=begin%>
+ <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
+<%
+=end%>
     <%= render 'shared/navbar' %>
     <%= yield %>
     <%= render 'shared/footer' %>
