--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,7 +6,7 @@
   </div>
 </div>
 
-<div class="cards container mt-4 mb-4">
+<div class="cards">
   <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://images.pexels.com/photos/4661206/pexels-photo-4661206.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940)">
     Wedding Day
   </div>
