--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,9 @@
 <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.pexels.com/photos/1043902/pexels-photo-1043902.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940);">
   <div class="container">
     <h1>Looking to make your wedding day magical:</h1>
-    <p>Change your life and learn to code at one of our campuses around the world.</p>
+    <p>
+      <span id="banner-typed-text"></span>
+    </p>
     <a class="btn btn-flat" href="#">Search for wedding accessories</a>
   </div>
 </div>
