added booking new

--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -4,7 +4,9 @@
 
 
   <%= link_to 'Go back', items_path %>
-
+<% if policy(Booking).new? %>
+  <%= link_to 'Add booking', new_item_booking_path(@item) %>
+<% end %>
 
 <% if policy(@item).edit? %>
   <%= link_to 'Edit Item', edit_item_path(@item) %>
