--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -57,10 +57,12 @@
 
 </div>
 
-<%= link_to 'See our products', items_path %>
+<div class="text-center">
+  <%= link_to 'See our products', items_path, class: "btn-ghost " %>
 
-<% if user_signed_in? %>
-  <% if policy(Item).create? %>
-    <%= link_to "New item", new_item_path %>
+  <% if user_signed_in? %>
+    <% if policy(Item).create? %>
+      <%= link_to "New item", new_item_path, class: "btn-ghost " %>
+    <% end %>
   <% end %>
-<% end %>
+</div>
