--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -13,13 +13,14 @@
 }
 .footer-links a {
   color: black;
-  opacity: 0.15;
+  opacity: 0.35;
   text-decoration: none;
   font-size: 24px;
   padding: 0px 10px;
 }
 .footer-links a:hover {
   opacity: 1;
+  color: rgb(61, 61, 245);
 }
 .footer .fa-heart {
   color: #D23333;
