--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -11,3 +11,7 @@
 <% if policy(@item).edit? %>
   <%= link_to 'Edit Item', edit_item_path(@item) %>
 <% end %>
+
+<% if policy(Booking).index? %>
+  <%= link_to 'View All My Bookings', bookings_path %>
+<% end %>
