--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,14 +1,14 @@
 <div class="cards">
   <% @items.each do |item| %>
     <div class="card-trip">
-      <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/greece.jpg" />
+      <img src="https://images.unsplash.com/photo-1624585032661-6f980bd064e1?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=387&q=80" />
       <div class="card-trip-infos">
         <div>
           <h2><%= item.name%> <span class="item-category">#<%= item.category%></span></h2>
           <p><%= item.description%></p>
         </div>
           <h2 class="card-trip-pricing">Rs. <%= item.price%></h2>
-          <img src="https://kitt.lewagon.com/placeholder/users/krokrob" class="card-trip-user avatar-bordered" />
+          <img src="https://kitt.lewagon.com/placeholder/users/krokrob" class="card-trip-user avatar-bordered"/>
       </div>
     </div>
   <% end %>
