--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,7 +1,7 @@
 <div class="cards">
   <% @items.each do |item| %>
     <div class="card-trip">
-      <img src="https://images.unsplash.com/photo-1624585032661-6f980bd064e1?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=387&q=80" />
+      <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/greece.jpg" />
       <div class="card-trip-infos">
         <div>
           <h2><%= item.name%> <span class="item-category">#<%= item.category%></span></h2>
