--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,20 +1,35 @@
 .banner {
   background-size: cover;
   background-position: center;
+  height: 60vh;
   padding: 150px 0;
+  .container{
+    width: 70%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .btn{
+    margin-top: 20px;
+    padding: 10px 50px;
+    font-size: 20px;
+    border-radius: 10px;
+  }
 }
 
 .banner h1 {
   margin: 0;
   color: white;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
-  font-size: 32px;
+  font-size: 2.5em;
   font-weight: bold;
+
 }
 
 .banner p {
-  font-size: 20px;
+  font-size: 1.5em;
   color: white;
   opacity: .7;
+
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
 }
