--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,68 +1,28 @@
-<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.pexels.com/photos/1043902/pexels-photo-1043902.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940);">
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1544078751-58fee2d8a03b?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1170&q=80);">
   <div class="container">
     <h1>Looking to make your wedding day magical:</h1>
     <p>
       <span id="banner-typed-text"></span>
     </p>
-    <a class="btn btn-flat" href="#">Search for wedding accessories</a>
+    <%= link_to 'See our products', items_path, class: "btn btn-flat" %>
+    <%# This will be replaced by a search bar afterwards %>
   </div>
 </div>
 
-<div class="cards">
-  <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://images.pexels.com/photos/4661206/pexels-photo-4661206.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940)">
-    Wedding Day
-  </div>
-
-  <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://images.pexels.com/photos/730055/pexels-photo-730055.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940)">
-    Rental
-  </div>
-
-  <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://images.pexels.com/photos/1446161/pexels-photo-1446161.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940)">
-    Accessories
-  </div>
-    <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://images.pexels.com/photos/1342609/pexels-photo-1342609.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940)">
-    Wedding Day
-  </div>
-
-    <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://images.pexels.com/photos/4661206/pexels-photo-4661206.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940)">
-    Wedding Day
-  </div>
-
-  <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://images.pexels.com/photos/730055/pexels-photo-730055.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940)">
-    Rental
-  </div>
-
-  <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://images.pexels.com/photos/1446161/pexels-photo-1446161.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940)">
-    Accessories
-  </div>
-    <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://images.pexels.com/photos/1342609/pexels-photo-1342609.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940)">
-    Wedding Day
-  </div>
-
-  <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://images.pexels.com/photos/4661206/pexels-photo-4661206.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940)">
-    Wedding Day
-  </div>
-
-  <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://images.pexels.com/photos/730055/pexels-photo-730055.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940)">
-    Rental
-  </div>
-
-  <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://images.pexels.com/photos/1446161/pexels-photo-1446161.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940)">
-    Accessories
-  </div>
-    <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://images.pexels.com/photos/1342609/pexels-photo-1342609.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940)">
-    Wedding Day
-  </div>
-
-
-</div>
-
-<div class="text-center">
-  <%= link_to 'See our products', items_path, class: "btn-ghost " %>
+<div class="text-center mt-4">
+  <%# <%= link_to 'See our products', items_path, class: "btn-ghost " %>
 
   <% if user_signed_in? %>
     <% if policy(Item).create? %>
       <%= link_to "New item", new_item_path, class: "btn-ghost " %>
     <% end %>
+  <% end %>
+</div>
+
+<div class="cards home-cards">
+  <% @categories.each do |category| %>
+    <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)),url(<%= category[:url] %>)">
+      <%= category[:name] %>
+    </div>
   <% end %>
 </div>
