--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,7 +1,11 @@
 <div class="cards">
   <% @items.each do |item| %>
     <div class="card-trip">
+    <%if item.photo.attached? %>
+      <%= cl_image_tag item.photo.key, height: 300, width: 400, crop: :fill %>
+    <%else%>
       <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/greece.jpg" />
+    <%end%>
       <div class="card-trip-infos">
         <div>
           <h2><%= item.name%> <span class="item-category">#<%= item.category%></span></h2>
