--- a/app/views/shared/_form.html.erb
+++ b/app/views/shared/_form.html.erb
@@ -1,6 +1,7 @@
 <%= simple_form_for @item do |f| %>
   <%= f.input :name %>
   <%= f.input :description %>
+  <%= f.input :photo, as: :file %>
   <%= f.input :category %>
   <%= f.input :price %>
   <%= f.button :submit %>
