--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,17 +1,33 @@
-<h2><%= @item.name %></h2>
-<p><%= @item.description %></p>
+<div class="text-title">
+  <h2><%= @item.name %></h2>
+  <p><%= @item.description %></p>
+</div>
 
+<div class="cards-item">
+  <div style="border-radius:5px; background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://images.unsplash.com/photo-1502727135886-df285cc8379f?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8d2VkZGluZyUyMGRyZXNzfGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60)">
+  </div>
+  <div class="card-item">
+    <p><strong>Category:</strong></p>
+    <p><strong>Name:</strong></p>
+    <p><strong>Availability:</strong></p>
+    <p><strong>Price:</strong></p>
+    <p><strong>Rating:</strong></p>
+    <p><strong>Owner:</strong></p>
+  </div>
+</div>
 
+<%= link_to 'Go back', items_path, class: "btn-ghost ml-4" %>
 
-  <%= link_to 'Go back', items_path %>
 <% if policy(Booking).new? %>
-  <%= link_to 'Add booking', new_item_booking_path(@item) %>
+  <%= link_to 'Add booking', new_item_booking_path(@item), class: "btn-ghost" %>
 <% end %>
 
 <% if policy(@item).edit? %>
-  <%= link_to 'Edit Item', edit_item_path(@item) %>
+  <%= link_to 'Edit Item', edit_item_path(@item), class: "btn-ghost ml-4" %>
 <% end %>
 
+<!--
 <% if policy(Booking).index? %>
   <%= link_to 'View All My Bookings', bookings_path %>
 <% end %>
+-->
