--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,12 +1,12 @@
 <div class="main-container">
-  <div class="cards">
+  <div class="cards card-grid">
     <% @items.each do |item| %>
       <div class="card-trip">
-      <%if item.photo.attached? %>
-        <%= cl_image_tag item.photo.key, height: 300, width: 400, crop: :fill %>
-      <%else%>
-        <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/greece.jpg" />
-      <%end%>
+        <%if item.photo.attached? %>
+          <%= cl_image_tag item.photo.key, height: 300, width: 400, crop: :fill %>
+        <%else%>
+          <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/greece.jpg" />
+        <%end%>
         <div class="card-trip-infos">
           <div>
             <h2><%= item.name%> <span class="item-category">#<%= item.category%></span></h2>
@@ -14,8 +14,10 @@
             <%= link_to 'Go to the item', item_path(item) %>
           </div>
         </div>
-    <% end %>
+        </div>
+      <% end %>
   </div>
 
- <img id="map" src='https://api.mapbox.com/?access_token=YOUR-TOKEN-HERE=pk.eyJ1IjoiZGhhbmlzdGhhIiwiYSI6ImNrdnQ2bXNoZjk2OXQybnF3am40ejNhNzcifQ.VfGx4oCViDIFwsWkmmaMpA'>
+  <img id="map" src='https://api.mapbox.com/?access_token=YOUR-TOKEN-HERE=pk.eyJ1IjoiZGhhbmlzdGhhIiwiYSI6ImNrdnQ2bXNoZjk2OXQybnF3am40ejNhNzcifQ.VfGx4oCViDIFwsWkmmaMpA'>
+
 </div>
