--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -18,6 +18,13 @@
       <% end %>
   </div>
 
-  <img id="map" src='https://api.mapbox.com/?access_token=YOUR-TOKEN-HERE=pk.eyJ1IjoiZGhhbmlzdGhhIiwiYSI6ImNrdnQ2bXNoZjk2OXQybnF3am40ejNhNzcifQ.VfGx4oCViDIFwsWkmmaMpA'>
-
+  <div id="map"
+      style="width: 100%; height: 600px;"
+      data-markers="<%= @markers.to_json %>"
+      data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"></div>
+  <%
+=begin%>
+ <img id="map" src='https://api.mapbox.com/?access_token=YOUR-TOKEN-HERE=pk.eyJ1IjoiZGhhbmlzdGhhIiwiYSI6ImNrdnQ2bXNoZjk2OXQybnF3am40ejNhNzcifQ.VfGx4oCViDIFwsWkmmaMpA'>
+<%
+=end%>
 </div>
