added geocode and algolia

--- a/app/views/shared/_form.html.erb
+++ b/app/views/shared/_form.html.erb
@@ -4,5 +4,6 @@
   <%= f.input :photo, as: :file %>
   <%= f.input :category %>
   <%= f.input :price %>
+  <%= f.input :address %>
   <%= f.button :submit %>
 <% end %>
