--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,12 +1,23 @@
-<h1>All my bookings</h1>
+<h1 class="text-center mt-4 py-3">All my bookings</h1>
+<div class="tabs">
+  <div class="tabs-item">
+    <h3 id="header-1">COMMENT</h3>
+  </div>
+  <div class="tabs-item">
+    <h3 id="header-2">START DATE</h3>
+  </div>
+  <div class="tabs-item" id="third-item">
+    <h3 id="header-3">END DATE</h3>
+  </div>
+</div>
 <ol>
   <% @bookings.each do |booking| %>
-    <li>
-      <%= booking.comment %> |
-      <%= booking.start %> |
-      <%= booking.return %>
-      <%= link_to "Edit This Booking", edit_booking_path(booking) %>
-      <%= link_to "Delete", booking_path(booking), method: :delete, data: {confirm: "Are You Sure?"} %>
+    <li class="tabs">
+      <p class="tabs-item"><%= booking.comment %></p>
+      <p class="tabs-item"><%= booking.start %></p>
+      <p class="tabs-item"><%= booking.return %></p>
+      <p class="tabs-item" id="fourth-child"><%= link_to "Edit This Booking", edit_booking_path(booking), class: "btn-ghost" %></p>
+      <p class="tabs-item"><%= link_to "Delete", booking_path(booking), method: :delete, data: {confirm: "Are You Sure?"}, class: "btn-ghost" %></p>
     </li>
   <% end %>
 </ol>
