--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -94,6 +94,10 @@
 .card-item {
   padding: 20px;
 }
+
+.card-image {
+  background-size: cover;
+}
 // Smallest device
 @media (min-width: 100px) and (max-width: 575px) {
   .cards {
