--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,7 +1,8 @@
 <div id="map"
       style="width: 100%; height: 500px;"
       data-markers="<%= @markers.to_json %>"
-      data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"></div>
+      data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
+</div>
 
   <div class="cards">
     <% @items.each do |item| %>
@@ -15,19 +16,9 @@
           <div>
             <h2><%= item.name%> <span class="item-category">#<%= item.category%></span></h2>
             <p><%= item.description%></p>
-            <%= link_to 'Go to the item', item_path(item) %>
+            <%= link_to 'More Info', item_path(item) %>
           </div>
         </div>
         </div>
       <% end %>
   </div>
-
-
-
-  <%
-=begin%>
-
-
- <img id="map" src='https://api.mapbox.com/?access_token=YOUR-TOKEN-HERE=pk.eyJ1IjoiZGhhbmlzdGhhIiwiYSI6ImNrdnQ2bXNoZjk2OXQybnF3am40ejNhNzcifQ.VfGx4oCViDIFwsWkmmaMpA'>
-<%
-=end%>
