--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,27 +1,34 @@
-<div class="text-title">
-  <h2><%= @item.name %></h2>
-  <p><%= @item.description %></p>
-</div>
-
-<div class="cards-item">
-  <div style="border-radius:5px; background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://images.unsplash.com/photo-1502727135886-df285cc8379f?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8d2VkZGluZyUyMGRyZXNzfGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60)">
+<div style="height: 75vh;"">
+  <div class="text-title">
+    <h2><%= @item.name %></h2>
+    <p><%= @item.description %></p>
   </div>
-  <div class="card-item">
-    <p><strong>Category:</strong></p>
-    <p><strong>Name:</strong></p>
-    <p><strong>Availability:</strong></p>
-    <p><strong>Price:</strong></p>
-    <p><strong>Rating:</strong></p>
-    <p><strong>Owner:</strong></p>
+
+  <div class="cards-item">
+    <% if @item.photo.attached? %>
+      <div class="card-image" style="border-radius:5px; background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path @item.photo.key%>')">
+      </div>
+    <%else%>
+      <div class="card-image" style="border-radius:5px; background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://images.unsplash.com/photo-1502727135886-df285cc8379f?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8d2VkZGluZyUyMGRyZXNzfGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60)">
+      </div>
+    <%end%>
+    <div class="card-item">
+      <p><strong>Category:</strong> <%=@item.category %> </p>
+      <p><strong>Size:</strong> XL</p>
+      <p><strong>Availability:</strong> Yes</p>
+      <p><strong>Price:</strong> Rs. <%=@item.price %> </p>
+      <p><strong>Rating:</strong> 4/5 </p>
+      <p><strong>Owner:</strong> <%="#{@item.user.first_name} #{@item.user.last_name}"%> </p>
+    </div>
   </div>
+
+  <%= link_to 'Go back', items_path, class: "btn-ghost ml-4" %>
+
+  <% if policy(Booking).new? %>
+    <%= link_to 'Add booking', new_item_booking_path(@item), class: "btn-ghost" %>
+  <% end %>
+
+  <% if policy(@item).edit? %>
+    <%= link_to 'Edit Item', edit_item_path(@item), class: "btn-ghost ml-4" %>
+  <% end %>
 </div>
-
-<%= link_to 'Go back', items_path, class: "btn-ghost ml-4" %>
-
-<% if policy(Booking).new? %>
-  <%= link_to 'Add booking', new_item_booking_path(@item), class: "btn-ghost" %>
-<% end %>
-
-<% if policy(@item).edit? %>
-  <%= link_to 'Edit Item', edit_item_path(@item), class: "btn-ghost ml-4" %>
-<% end %>
