--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -11,9 +11,18 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
+      <li class="nav-item">
+        <%= link_to "Our Products", items_path, class: "nav-link" %>
+      </li>
       <% if !user_signed_in? %>
         <li class="nav-item">
           <%= link_to "Rent With Us", "#", class: "nav-link" %>
+        </li>
+      <%else%>
+        <li class="nav-item">
+          <% if policy(Item).create? %>
+            <%= link_to "New item", new_item_path, class: "nav-link" %>
+          <% end %>
         </li>
       <%end%>
       <% if user_signed_in? %>
