front end for booking form and create item form

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -5,6 +5,7 @@
 @import "button";
 @import "card";
 @import "footer";
-@import "navbar";
+@import "form";
 @import "map";
+@import "navbar";
 @import "tabs";
