--- a/app/views/shared/_bookingform.html.erb
+++ b/app/views/shared/_bookingform.html.erb
@@ -1,6 +1,10 @@
-<%= simple_form_for([@item, @booking]) do |f|%>
-  <%= f.input :comment %>
-  <%= f.input :start %>
-  <%= f.input :return %>
-  <%= f.submit %>
-<% end %>
+<div style="height: 71vh;">
+  <div class="form-booking">
+    <%= simple_form_for([@item, @booking]) do |f|%>
+    <%= f.input :comment %>
+    <%= f.input :start, as: :date, html5: true %>
+    <%= f.input :return, as: :date, html5: true%>
+    <%= f.submit class:"btn btn-ghost"%>
+  <% end %>
+  </div>
+</div>
