--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,9 +1,4 @@
-<div id="map"
-      style="width: 100%; height: 500px;"
-      data-markers="<%= @markers.to_json %>"
-      data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
-</div>
-
+<div class="index-display">
   <div class="cards">
     <% @items.each do |item| %>
       <div class="card-trip">
@@ -22,3 +17,10 @@
         </div>
       <% end %>
   </div>
+
+  <div id="map"
+        style="width: 100%; height: 500px;"
+        data-markers="<%= @markers.to_json %>"
+        data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
+  </div>
+</div>
