--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -1,5 +1,10 @@
 .mapboxgl-popup {
   max-width: 200px;
+  img{
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+  }
 }
 
 .mapboxgl-popup-content {
