--- a/app/views/items/_info_window.html.erb
+++ b/app/views/items/_info_window.html.erb
@@ -1,2 +1,13 @@
+<%if item.photo.attached? %>
+  <%= cl_image_tag item.photo.key, height: 300, width: 400, crop: :fill %>
+<%else%>
+  <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/greece.jpg" />
+<%end%>
+
 <h4><%= item.name %></h4>
-<p><%= item.description %></p>
+
+<% if item.description.size > 40 %>
+    <p><%= item.description.first(40) %>...</p>
+<% else %>
+  <p><%= item.description %></p>
+<% end %>
