added select 2 to categories

--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -13,7 +13,7 @@
       </div>
     <%end%>
     <div class="card-item">
-      <p><strong>Category:</strong> <%=@item.category %> </p>
+      <p><strong>Category:</strong> <%=@item.category.name %> </p>
       <p><strong>Size:</strong> XL</p>
       <p><strong>Availability:</strong> Yes</p>
       <p><strong>Price:</strong> Rs. <%=@item.price %> </p>
