--- a/app/views/shared/_form.html.erb
+++ b/app/views/shared/_form.html.erb
@@ -1,9 +1,9 @@
 <div class="form-item">
-  <%= simple_form_for @item do |f| %>
+  <%= simple_form_for ([@item]) do |f| %>
     <%= f.input :name %>
     <%= f.input :description %>
     <%= f.input :photo, as: :file%>
-    <%= f.input :category %>
+    <%= f.association :category,input_html: { class: 'select2', id: 'category-input' } %>
     <%= f.input :price %>
     <%= f.input :address %>
     <%= f.submit class:"btn btn-ghost"%>
