--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -11,8 +11,8 @@
 
 <div class="cards home-cards">
   <% @categories.each do |category| %>
-    <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)),url(<%= category[:url] %>)">
-      <%= category[:name] %>
+    <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)),url(<%= category.url %>)">
+      <%= category.name %>
     </div>
   <% end %>
 </div>
