--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,7 +4,14 @@
     <p>
       <span id="banner-typed-text"></span>
     </p>
-    <%= link_to 'See our products', items_path, class: "btn btn-flat" %>
+    <%= form_tag items_path, method: :get do %>
+      <%= text_field_tag :query,
+        params[:query],
+        class: "form-control",
+        placeholder: "Find an Item"
+      %>
+      <%= submit_tag "Search", class: "btn btn-flat" %>
+    <% end %>
     <%# This will be replaced by a search bar afterwards %>
   </div>
 </div>
