changed condition for no item in index

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,6 +1,6 @@
 
 <% if @items.size == 0 %>
-  <h2>Your items ready for rent nearby</h2>
+  <h2>Sorry, no items nearby...</h2>
 <% elsif @items.size == 1 %>
   <h2>You have 1 item ready for rent, be quick</h2>
 <% else %>
