--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -12,16 +12,15 @@
       %>
       <%= submit_tag "Search", class: "btn btn-flat" %>
     <% end %>
-    <%# This will be replaced by a search bar afterwards %>
   </div>
 </div>
 
 <div class="cards home-cards">
   <% @categories.each do |category| %>
-    <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)),url(<%= category.url %>)">
-    <% params[:query] = category.name %>
-
-      <%= category.name %>
-    </div>
+    <%= link_to items_path(category.name) do %>
+      <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)),url(<%= category.url %>)">
+        <%= category.name %>
+      </div>
+    <% end %>
   <% end %>
 </div>
