user can show all reviews

--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,38 +1,47 @@
-<div>
-  <div class="text-title">
-    <h2><%= @item.name %></h2>
-    <p><%= @item.description %></p>
-  </div>
+<div class="text-title">
+  <h2><%= @item.name %></h2>
+  <p><%= @item.description %></p>
+</div>
 
-  <div class="cards-item">
-    <% if @item.photo.attached? %>
-      <div class="card-image" style="border-radius:5px; background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path @item.photo.key%>')">
-      </div>
-    <%else%>
-      <div class="card-image" style="border-radius:5px; background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://images.unsplash.com/photo-1502727135886-df285cc8379f?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8d2VkZGluZyUyMGRyZXNzfGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60)">
-      </div>
-    <%end%>
-    <div class="card-item">
-      <p><strong>Category:</strong> <%=@item.category.name %> </p>
-      <p><strong>Size:</strong> XL</p>
-      <p><strong>Availability:</strong> Yes </p>
-      <p><strong>Price:</strong> Rs. <%=@item.price %> </p>
-      <p><strong>Rating:</strong> <%=@item.reviews %> </p>
-      <p><strong>Owner:</strong> <%="#{@item.user.first_name} #{@item.user.last_name}"%> </p>
+<div class="cards-item">
+  <% if @item.photo.attached? %>
+    <div class="card-image" style="border-radius:5px; background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path @item.photo.key%>')">
     </div>
+  <%else%>
+    <div class="card-image" style="border-radius:5px; background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://images.unsplash.com/photo-1502727135886-df285cc8379f?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8d2VkZGluZyUyMGRyZXNzfGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60)">
+    </div>
+  <%end%>
+  <div class="card-item">
+    <p><strong>Category:</strong> <%=@item.category.name %> </p>
+    <p><strong>Size:</strong> XL</p>
+    <p><strong>Availability:</strong> Yes </p>
+    <p><strong>Price:</strong> Rs. <%=@item.price %> </p>
+    <p><strong>Rating:</strong> <%=@item.reviews %> </p>
+    <p><strong>Owner:</strong> <%="#{@item.user.first_name} #{@item.user.last_name}"%> </p>
   </div>
+</div>
 
-  <%= link_to 'Go back', items_path, class: "btn-ghost ml-4" %>
+<%= link_to 'Go back', items_path, class: "btn-ghost ml-4" %>
 
-  <% if user_signed_in? && policy(Booking).new? %>
-    <%= link_to 'Add booking', new_item_booking_path(@item), class: "btn-ghost" %>
-  <% end %>
+<% if user_signed_in? && policy(Booking).new? %>
+  <%= link_to 'Add booking', new_item_booking_path(@item), class: "btn-ghost" %>
+<% end %>
 
-  <% if user_signed_in? && policy(@item).edit? %>
-    <%= link_to 'Edit Item', edit_item_path(@item), class: "btn-ghost ml-4" %>
-  <% end %>
+<% if user_signed_in? && policy(@item).edit? %>
+  <%= link_to 'Edit Item', edit_item_path(@item), class: "btn-ghost ml-4" %>
+<% end %>
 
-  <% if user_signed_in? && policy(Review).create? %>
-    <%= render 'shared/reviewform' %>
+<% if user_signed_in? && policy(Review).create? %>
+  <% if @item.reviews.blank? %>
+    Be the first to leave a review for <%= @item.name %>
+  <% else %>
+  <%= render 'shared/reviewform' %>
+<% end %>
+
+<div id="reviews">
+    <% @item.reviews.each do |review| %>
+      <p><%= review.comment %></p>
+      <p><%= review.rating %></p>
+    <% end %>
   <% end %>
 </div>
