--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -16,7 +16,7 @@
     <p><strong>Size:</strong> XL</p>
     <p><strong>Availability:</strong> Yes </p>
     <p><strong>Price:</strong> Rs. <%=@item.price %> </p>
-    <p><strong>Rating:</strong> <%=@item.reviews %> </p>
+    <p><strong>Rating:</strong> <%=@ratings.round%> </p>
     <p><strong>Owner:</strong> <%="#{@item.user.first_name} #{@item.user.last_name}"%> </p>
   </div>
 </div>
