--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -39,7 +39,7 @@
 <% end %>
 
 <div id="reviews">
-    <% @item.reviews.each do |review| %>
+    <% @reviews.each do |review| %>
       <p><%= review.comment %></p>
       <p><%= review.rating %></p>
     <% end %>
