--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -35,13 +35,13 @@
   <% if @item.reviews.blank? %>
     Be the first to leave a review for <%= @item.name %>
   <% else %>
-  <%= render 'shared/reviewform' %>
+    <%= render 'shared/reviewform' %>
+  <% end %>
 <% end %>
 
 <div id="reviews">
-    <% @reviews.each do |review| %>
+  <% @item.reviews.each do |review| %>
       <p><%= review.comment %></p>
       <p><%= review.rating %></p>
-    <% end %>
   <% end %>
 </div>
