--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,9 +1,9 @@
-<h2>Sign up</h2>
+<h2 class="ml-4">Sign up</h2>
 
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= f.error_notification %>
 
-  <div class="form-inputs">
+  <div class="form-inputs ml-4 mr-4">
     <%= f.input :email,
                 required: true,
                 autofocus: true,
@@ -33,7 +33,7 @@
                 input_html: { autocomplete: "new-password" } %>
   </div>
 
-  <div class="form-actions">
+  <div class="form-actions ml-4 mr-4">
     <%= f.button :submit, "Sign up", class: "btn-flat" %>
   </div>
 <% end %>
