--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,11 @@
-<div class="navbar navbar-expand-sm navbar-light navbar-lewagon sticky-top">
+<div class="navbar navbar-expand-sm navbar-dark bg-dark navbar-lewagon sticky-top">
   <%= link_to root_path, class: "navbar-brand" do %>
-    <%= image_tag "logo.png", class: "rounded-circle"%>
-    <span>My Posh Wedding Rental</span>
+    <%
+=begin%>
+ <%= image_tag "logo.png", class: "rounded-circle"%>
+<%
+=end%>
+    <span><i class="fas fa-heart"></i> My Posh</span>
   <% end %>
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
