changed logo colour

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -11,6 +11,7 @@
     font-family: 'Courgette';
     font-weight: bold;
     font-size: 30px;
+    color: #FF5964;
   }
   // img {
   //   border: 5px solid gold;
