edited the show

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -83,14 +83,16 @@
 }
 
 .cards-item {
+  width: 80%;
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 2fr 1fr;
   grid-gap: 16px;
-  margin: 16px;
+  margin: 40px auto;
   background-size: cover;
   background-position: center;
-  height: 400px;
-  margin-bottom: 40px;
+  height: 60vh;
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  padding: 16px;
 }
 
 .card-item {
