--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -21,7 +21,7 @@
         <%if item.photo.attached? %>
           <%= cl_image_tag item.photo.key, height: 500, width: 400, :crop => "fit" %>
         <%else%>
-          <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/greece.jpg" />
+          <img src="https://images.unsplash.com/photo-1522675378431-f2c7406d4173?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=687&q=80" />
         <%end%>
         <div class="card-trip-infos">
           <div>
