--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -29,25 +29,21 @@
           <% end %>
         </li>
       <%end%>
-      <% if user_signed_in? %>
-        <li class="nav-item dropdown">
-          <%= image_tag "profile.png", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
-          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+      <li class="nav-item dropdown">
+        <%= image_tag "profile.png", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+          <% if user_signed_in? %>
             <% if policy(Booking).index? %>
               <%= link_to "See My Bookings", bookings_path, class: "dropdown-item" %>
             <% end %>
             <%= link_to "Edit My Account", edit_user_registration_path, class: "dropdown-item" %>
             <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
-          </div>
-        </li>
-      <% else %>
-        <li class="nav-item">
-          <%= link_to "Login", new_user_session_path, class: "nav-link" %>
-        </li>
-        <li class="nav-item">
-          <%= link_to 'Sign Up', new_user_registration_path, class: "nav-link" %>
-        </li>
-      <% end %>
+          <% else %>
+            <%= link_to "Login", new_user_session_path, class: "dropdown-item" %>
+            <%= link_to 'Sign Up', new_user_registration_path, class: "dropdown-item" %>
+          <% end %>
+        </div>
+      </li>
     </ul>
   </div>
 </div>
