--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -9,12 +9,12 @@
     flex-direction: column;
     align-items: center;
   }
-  .btn{
-    margin-top: 20px;
-    padding: 10px 50px;
-    font-size: 20px;
-    border-radius: 10px;
-  }
+  // .btn{
+  //   margin-top: 20px;
+  //   padding: 10px 50px;
+  //   font-size: 20px;
+  //   border-radius: 10px;
+  // }
 }
 
 .banner h1 {
@@ -23,13 +23,11 @@
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
   font-size: 2.5em;
   font-weight: bold;
-
 }
 
 .banner p {
   font-size: 1.5em;
   color: white;
-  opacity: .7;
-
+  opacity: .9;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
 }
