--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,18 +1,21 @@
 <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1544078751-58fee2d8a03b?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1170&q=80);">
   <div class="container">
-    <h1>Looking to make your wedding day magical:</h1>
+    <h1>Make Your Wedding Magical!</h1>
     <p>
       <span id="banner-typed-text"></span>
     </p>
-    <%= form_tag items_path, method: :get do %>
+  </div>
+  <%= form_tag items_path, method: :get do %>
+    <div class="search-form-control form-group">
       <%= text_field_tag :query,
         params[:query],
-        class: "form-control",
-        placeholder: "Find an Item"
+        class: "form-control string required bg-dark",
+        id: "search_query",
+        placeholder: "Find your next"
       %>
-      <%= submit_tag "Search", class: "btn btn-flat" %>
-    <% end %>
-  </div>
+      <%= submit_tag "Search", class: "btn btn-search" %>
+    </div>
+  <% end %>
 </div>
 
 <div class="cards home-cards">
