changed search button colour in nav

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,7 +1,7 @@
 .banner {
   background-size: cover;
   background-position: center;
-  height: 60vh;
+  // height: 60vh;
   padding: 150px 0;
   // .container{
   //   width: 70%;
