--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -41,15 +41,15 @@
   color: white;
 }
 
-.btn-search {
-  color: white;
-  padding: 8px 24px;
-  border-radius: 4px;
-  background: #1EDD88;
-  transition: background 0.3s ease;
-}
+// .btn-search {
+//   color: white;
+//   padding: 8px 24px;
+//   border-radius: 4px;
+//   background: #1EDD88;
+//   transition: background 0.3s ease;
+// }
 
-.btn-search:hover {
-  background: #1BCB7F;
-  color: white;
-}
+// .btn-search:hover {
+//   background: #1BCB7F;
+//   color: white;
+// }
