--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -12,7 +12,7 @@
           id: "search_query",
           placeholder: "Find your next wedding inspiration..."
         %>
-        <%= submit_tag "Search", class: "btn btn-search" %>
+        <%= submit_tag "Search", class: "btn btn-flat" %>
       </div>
     <% end %>
   </div>
