--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -5,6 +5,6 @@
     <a href="#"><i class="fab fa-twitter"></i></a>
   </div>
   <div class="footer-copyright">
-    Made With <i class="fas fa-heart"></i> @ <b>My Posh</b>
+    Made By <i class="fas fa-heart"></i> <b>My Posh</b>
   </div>
 </div>
