--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -174,6 +174,7 @@
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   display: flex;
   align-items: center;
+  position: relative;
 }
 
 .card-product img {
@@ -204,4 +205,41 @@
   display: grid;
   grid-template-columns: 1fr;
   grid-gap: 16px;
+}
+
+.edit-book {
+  position: absolute;
+  right: 140px;
+}
+
+.delete-book {
+  position: absolute;
+  right: 40px;
+}
+
+.card-product-none {
+  overflow: hidden;
+  height: 70vh;
+  background: white;
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  display: flex;
+  align-items: center;
+}
+
+.card-product-none h2 {
+  font-size: 16px;
+  font-weight: bold;
+  margin: 0;
+}
+
+.card-product-none p {
+  font-size: 12px;
+  line-height: 1.4;
+  opacity: .7;
+  margin-bottom: 0;
+  margin-top: 8px;
+}
+
+.card-product-none .card-product-infos {
+  padding: 16px;
 }
