repositioned search bar

--- a/app/assets/stylesheets/items/_items.scss
+++ b/app/assets/stylesheets/items/_items.scss
@@ -9,6 +9,13 @@
   }
   #map{
     position: sticky;
-    top: 100px;
+    top: 230px;
   }
+}
+
+.items-top{
+  position: sticky;
+  top: 70px;
+  background-color: rgb(241, 241, 241);
+  margin: 0 35px;
 }
