--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,20 +1,21 @@
-<div class="m-4">
-  <% if @items.size == 0 %>
-    <h2>Sorry, no items nearby...</h2>
-  <% elsif @items.size == 1 %>
-    <h2>You have 1 item ready for rent, be quick</h2>
-  <% else %>
-    <h2>There are <%= @items.size %> wedding items ready for rental</h2>
-  <% end %>
-  <%= form_tag items_path,class:"form-inline my-4", method: :get do %>
-    <div class="row w-50">
-        <%= submit_tag "Search", class: "btn btn-flat col-2" %>
+<div class="items-top text-center">
+  <%= form_tag items_path, method: :get do %>
+      <div class="search-form-control form-group">
         <%= text_field_tag :query,
           params[:query],
-          class: "col",
-          placeholder: "Find an Item"
+          class: "form-control string required",
+          id: "search_query",
+          placeholder: "Find your next wedding inspiration..."
         %>
-    </div>
+        <%= submit_tag "Search", class: "btn btn-flat" %>
+      </div>
+  <% end %>
+  <% if @items.size == 0 %>
+    <p>Sorry, we have no items to rent</p>
+  <% elsif @items.size == 1 %>
+    <p>You have 1 item ready to rent, be quick</p>
+  <% else %>
+    <h4>You have <%= @items.size %> items ready to rent</h4>
   <% end %>
 </div>
 
@@ -43,10 +44,9 @@
         </div>
       <% end %>
   </div>
-
-  <div id="map"
-        style="width: 1200px; height: 80vh;"
-        data-markers="<%= @markers.to_json %>"
-        data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
-  </div>
+    <div id="map"
+          style="width: 1200px; height: 80vh;"
+          data-markers="<%= @markers.to_json %>"
+          data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
+    </div>
 </div>
