--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,21 +1,21 @@
-<div class="items-top text-center">
+<div class="m-4 items-top">
+  <% if @items.size == 0 %>
+    <% itemnumber = "Sorry, we have no items to rent"%>
+  <% elsif @items.size == 1 %>
+    <% itemnumber = "You have 1 item ready to rent, be quick"%>
+  <% else %>
+    <% itemnumber = "You have #{@items.size} items ready to rent. Search them here"%>
+  <% end %>
   <%= form_tag items_path, method: :get do %>
       <div class="search-form-control form-group">
         <%= text_field_tag :query,
           params[:query],
           class: "form-control string required",
           id: "search_query",
-          placeholder: "Find your next wedding inspiration..."
+          placeholder: "#{itemnumber}"
         %>
         <%= submit_tag "Search", class: "btn btn-flat" %>
       </div>
-  <% end %>
-  <% if @items.size == 0 %>
-    <p>Sorry, we have no items to rent</p>
-  <% elsif @items.size == 1 %>
-    <p>You have 1 item ready to rent, be quick</p>
-  <% else %>
-    <h4>You have <%= @items.size %> items ready to rent</h4>
   <% end %>
 </div>
 
