fixed search button

--- a/app/assets/stylesheets/components/_search.scss
+++ b/app/assets/stylesheets/components/_search.scss
@@ -4,9 +4,10 @@
 
 .search-form-control .btn {
   position: absolute;
-  top: 8px;
-  bottom: 8px;
-  right: 8px;
+  top: 0px;
+  bottom: 0px;
+  right: 0px;
+  width: 200px;
 }
 
 .search-form-control .form-control {
